--- a/peoplemanagement/pom.xml
+++ b/peoplemanagement/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.cgi</groupId>
-  <artifactId>peoplemanagementFinal</artifactId>
+  <artifactId>peoplemanagement</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>peoplemanagement Maven Webapp</name>
